publicstatus: support assignment groups
